--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9alt2nRpC12Uk9gS9baDl411NQApFmC26EwA)H8WgZl5MYYcFfc+NcPb1dKGj75k"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -24,16 +23,14 @@
         data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown"
         aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
+              >Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -42,8 +39,7 @@
               id="navbarDropdownMenuLink"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false"
-            >
+              aria-expanded="false">
               Theme
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -61,6 +57,9 @@
       </div>
       <span class="name">Rahul</span>
     </div>
-    <div class="link">Links to accounts</div>
+    <div class="link">
+        <button class="button-85" role="button"><strong>Links</strong></button>
+    </div>
+    
   </body>
 </html>
