:heavy_plus_sign: index.html
updated the project cards sections of the webpage.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <span class="block p-0 m-0 font-normal text-base">Computer Applications Student at
           <wbr>Calicut University</span>
       </figcaption>
-    </figure><hr>
+    </figure>
+    <hr>
     <div class="container mr-auto ml-auto w-full mx-2 px-5 py-2 bg-transparent ">
       <h3 id="about" class="underline underline-offset-4 font-medium">About me</h3>
       <p class="container p-1 first-letter:capitalize first-letter:text-2xl h-full tracking-wide">Lorem ipsum dolor, sit
@@ -73,30 +74,53 @@
 
   <!-- Projects link -->
   <div id="project-bg" class="flex justify-evenly flex-row flex-nowrap w-full min-h-[360px] my-10 py-4 px-4">
-    <div class="button flex z-10"></div>
     <div class="cards flex bg-transparent p-2 rounded-2xl basis-3/12 grow-0 mx-2">
       <figure class="cards-fig">
-        <img src="assets/2.jpg" alt="Project thumbnail">
-      </figure><hr>
-      <p class="cards-desc">description</p>
+        <img src="assets/weather-app-thumb.jpg" alt="Project thumbnail">
+      </figure>
+      <hr>
+      <div>
+        <p class="cards-desc">
+          A simple Javascript Weather Forecaster.
+        </p><button class="cards-button" role="button"><a href="https://weather-application-nine-theta.vercel.app/"
+            target="_blank">click
+            here</a></button>
+      </div>
     </div>
     <div class="cards flex bg-transparent p-2 rounded-2xl basis-3/12 grow-0 mx-2">
       <figure class="cards-fig">
-        <img src="assets/2.jpg" alt="Project thumbnail">
-      </figure><hr>
-      <p class="cards-desc">description</p>
+        <img src="assets/temperature-anomaly-thumb.png" alt="Project thumbnail" style="background-color: white;">
+      </figure>
+      <hr>
+      <div>
+        <p class="cards-desc">
+          A simple webpage displaying temeperature anomalies.
+        </p><button class="cards-button" role="button"><a href="http://temp-anomalies-graph.vercel.app/"
+            target="_blank">click here</a></button>
+      </div>
     </div>
     <div class="cards flex bg-transparent p-2 rounded-2xl basis-3/12 grow-0 mx-2">
       <figure class="cards-fig">
-        <img src="assets/2.jpg" alt="Project thumbnail">
-      </figure><hr>
-      <p class="cards-desc">description</p>
+        <img src="assets/digilocker-guide-thumb.png" alt="Project thumbnail">
+      </figure>
+      <hr>
+      <div>
+        <p class="cards-desc">
+          A beginner digiLocker guide webpage.
+        </p><button class="cards-button" role="button"><a href="https://digilocker-guide.vercel.app/"
+            target="_blank">click here</a></button>
+      </div>
     </div>
     <div class="cards flex bg-transparent p-2 rounded-2xl basis-3/12 grow-0 mx-2">
       <figure class="cards-fig">
-        <img src="assets/2.jpg" alt="Project thumbnail">
-      </figure><hr>
-      <p class="cards-desc">description</p>
+        <img src="assets/C-Assignments-thumb.png" alt="Project thumbnail">
+      </figure>
+      <hr>
+      <div>
+        <p class="cards-desc">
+          list of basic C programs for uni CS purpose.
+        </p><button class="cards-button" role="button"><a href="https://github.com/visrm/C-Assignments" target="_blank" >click here</a></button>
+      </div>
     </div>
   </div>
 
