:heavy_plus_sign: added tailwindcss cdn as backup

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio - Rahul Murali | Masters of Computer Applications Student</title>
+  <script src="https://cdn.tailwindcss.com"></script> <!--backup tailwindcss scipt-->
   <link rel="stylesheet" href="styles\output.css">
   <link rel="stylesheet" href="styles\main.css">
 </head>
@@ -49,8 +50,7 @@
 
   <!-- Projects featured section -->
   <div id="project-bg" class="sm:p-4 py-4 overflow-hidden">
-    <div
-      class="cards mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
+    <div class="cards mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
       <figure class="cards-fig">
         <img src="assets/weather-app-thumb.jpg" alt="Project thumbnail">
       </figure>
@@ -62,8 +62,7 @@
             href="https://weather-application-nine-theta.vercel.app/" target="_blank">visit</a></button>
       </div>
     </div>
-    <div
-      class="cards mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
+    <div class="cards mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
       <figure class="cards-fig">
         <img src="assets/temperature-anomaly-thumb.png" alt="Project thumbnail" style="background-color: white;">
       </figure>
@@ -75,8 +74,7 @@
             target="_blank">visit</a></button>
       </div>
     </div>
-    <div
-      class="cards mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
+    <div class="cards mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
       <figure class="cards-fig">
         <img src="assets/digilocker-guide-thumb.png" alt="Project thumbnail">
       </figure>
@@ -88,8 +86,7 @@
             target="_blank">visit</a></button>
       </div>
     </div>
-    <div
-      class="cards mx-2 sm:m-2 sm:min-h-[360px] hidden sm:flex bg-transparent p-2 rounded-2xl sm:basis-3/12 grow-0">
+    <div class="cards mx-2 sm:m-2 sm:min-h-[360px] hidden sm:flex bg-transparent p-2 rounded-2xl sm:basis-3/12 grow-0">
       <figure class="cards-fig">
         <img src="assets/C-Assignments-thumb.png" alt="Project thumbnail">
       </figure>
