--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio - Rahul Murali | Masters of Computer Applications Student</title>
-  <script src="https://cdn.tailwindcss.com"></script> <!--backup tailwindcss scipt-->
-  <link rel="stylesheet" href="styles\output.css">
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="styles\main.css">
 </head>
 
