--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio - Rahul Murali | Masters of Computer Applications Student</title>
+  <script src="scripts/ScrollAnimate.js"></script>
   <link rel="stylesheet" href="styles/output.css">
   <link rel="stylesheet" href="styles\main.css">
 </head>
@@ -17,88 +18,96 @@
     class="flex flex-row flex-nowrap pb-8 pt-4 sticky mb-2 top-0 left-0 bg-black/10 w-full items-center justify-between backdrop-blur backdrop-brightness-125 ease-out duration-300 text-white shadow shadow-black/50">
     <p class="flex px-4 mx-2 text-center text-4xl font-bold tracking-wide">Portfolio</p>
     <ul class="flex mx-4 flex-row flex-nowrap list-none">
-      <li class="sm:mx-2 px-4 py-2 basis-1/3 font-semibold sm:text-lg text-base"><a href="#project-bg">Projects</a></li>
-      <li class="sm:mx-2 px-4 py-2 basis-1/3 font-semibold sm:text-lg text-base"><a href="#">News</a></li>
-      <li class="sm:mx-2 px-4 py-2 basis-1/3 font-semibold sm:text-lg text-base"><a href="#contact">Contact</a></li>
+      <li class="sm:mx-2 p-2 basis-1/3 font-semibold sm:text-lg text-base"><a href="#project-bg">Projects</a></li>
+      <li class="sm:mx-2 p-2 basis-1/3 font-semibold sm:text-lg text-base"><a href="#">News</a></li>
+      <li class="sm:mx-2 p-2 basis-1/3 font-semibold sm:text-lg text-base"><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
 
   <!-- Profile Details Card -->
-  <div
-    class="block ml-auto mr-auto my-10 px-2 pt-2 pb-1 min-h-16 sm:min-h-96 w-3/5 sm:w-5/12 rounded-2xl bg-white border shadow-black hover:shadow-2xl">
-    <figure class="flex mx-2 p-2 bg-transparent items-center place-content-center overflow-hidden flex-col sm:flex-row">
-      <img class="max-h-32 rounded-full bg-contain  border border-white shadow-black" src="./assets/user_profile.jpg"
-        alt="PROFILE PICTURE" />
-      <figcaption class="block m-0 sm:m-2 p-2 font-semibold text-base sm:text-xl sm:w-1/2">
-        Rahul Murali
-        <span class="poppins-regular text-xs sm:text-xs font-normal"><i>He/Him</i></span>
-        <span class="block p-0 m-0 font-normal text-sm sm:text-base tracking-wide">Computer Applications Student at
-          <wbr>Calicut University</span>
-      </figcaption>
-    </figure>
-    <hr>
-    <div class="container mr-auto ml-auto sm:mx-2 px-5 py-2 bg-transparent ">
-      <h3 class="underline underline-offset-4 font-medium">About me</h3>
-      <p class="container p-1 h-full tracking-wide italic"> Rahul Murali is a recent graduate with a degree in
-        Mathematics and a passion for software development.
-      </p>
+  <div class="m-0 p-4 min-h-svh sm:min-h-full">
+    <div
+      class="block ml-auto mr-auto my-10 px-2 pt-2 pb-1 min-h-36 sm:min-h-96 w-3/5 sm:w-5/12 rounded-2xl bg-white border shadow-black hover:shadow-2xl">
+      <figure
+        class="flex mx-2 p-2 bg-transparent items-center place-content-center overflow-hidden flex-col sm:flex-row">
+        <img class="max-h-32 rounded-full bg-contain  border border-white shadow-black" src="./assets/user_profile.jpg"
+          alt="PROFILE PICTURE" />
+        <figcaption class="block m-0 sm:m-2 p-2 font-semibold text-base sm:text-xl sm:w-1/2">
+          Rahul Murali
+          <span class="poppins-regular text-xs sm:text-xs font-normal"><i>He/Him</i></span>
+          <span class="block p-0 m-0 font-normal text-sm sm:text-base tracking-wide">Computer Applications Student at
+            <wbr>Calicut University</span>
+        </figcaption>
+      </figure>
+      <hr>
+      <div class="container mr-auto ml-auto sm:mx-2 px-5 py-2 bg-transparent ">
+        <h3 class="underline underline-offset-4 font-medium">About me</h3>
+        <p class="container p-1 h-full tracking-wide italic"> Rahul Murali is a recent graduate with a degree in
+          Mathematics and a passion for software development.
+        </p>
+      </div>
     </div>
   </div>
 
 
   <!-- Projects featured section -->
-  <div id="project-bg" class="sm:p-4 py-4 overflow-hidden">
-    <div class="cards mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
-      <figure class="cards-fig">
-        <img src="assets/weather-app-thumb.jpg" alt="Project thumbnail">
-      </figure>
-      <hr>
-      <div>
-        <p class="cards-desc sm:text-base">
-          A simple Javascript Weather Forecaster.
-        </p><button class="cards-button sm:text-sm" role="button"><a
-            href="https://weather-application-nine-theta.vercel.app/" target="_blank">visit</a></button>
+  <div class="m-0 py-2 sm:py-5 min-h-svh sm:min-h-full">
+    <div id="project-bg" class="sm:p-4 py-4 overflow-hidden">
+      <div
+        class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
+        <figure class="cards-fig">
+          <img src="assets/weather-app-thumb.jpg" alt="Project thumbnail">
+        </figure>
+        <hr>
+        <div>
+          <p class="cards-desc sm:text-base">
+            A simple Javascript Weather Forecaster.
+          </p><button class="cards-button sm:text-sm" role="button"><a
+              href="https://weather-application-nine-theta.vercel.app/" target="_blank">visit</a></button>
+        </div>
       </div>
-    </div>
-    <div class="cards mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
-      <figure class="cards-fig">
-        <img src="assets/temperature-anomaly-thumb.png" alt="Project thumbnail" style="background-color: white;">
-      </figure>
-      <hr>
-      <div>
-        <p class="cards-desc sm:text-base">
-          A simple webpage displaying temeperature anomalies.
-        </p><button class="cards-button sm:text-sm" role="button"><a href="http://temp-anomalies-graph.vercel.app/"
-            target="_blank">visit</a></button>
+      <div
+        class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
+        <figure class="cards-fig">
+          <img src="assets/temperature-anomaly-thumb.png" alt="Project thumbnail" style="background-color: white;">
+        </figure>
+        <hr>
+        <div>
+          <p class="cards-desc sm:text-base">
+            A simple webpage displaying temeperature anomalies.
+          </p><button class="cards-button sm:text-sm" role="button"><a href="http://temp-anomalies-graph.vercel.app/"
+              target="_blank">visit</a></button>
+        </div>
       </div>
-    </div>
-    <div class="cards mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
-      <figure class="cards-fig">
-        <img src="assets/digilocker-guide-thumb.png" alt="Project thumbnail">
-      </figure>
-      <hr>
-      <div>
-        <p class="cards-desc sm:text-base">
-          A beginner digiLocker guide webpage.
-        </p><button class="cards-button sm:text-sm" role="button"><a href="https://digilocker-guide.vercel.app/"
-            target="_blank">visit</a></button>
+      <div
+        class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
+        <figure class="cards-fig">
+          <img src="assets/digilocker-guide-thumb.png" alt="Project thumbnail">
+        </figure>
+        <hr>
+        <div>
+          <p class="cards-desc sm:text-base">
+            A beginner digiLocker guide webpage.
+          </p><button class="cards-button sm:text-sm" role="button"><a href="https://digilocker-guide.vercel.app/"
+              target="_blank">visit</a></button>
+        </div>
       </div>
-    </div>
-    <div class="cards mx-2 sm:m-2 sm:min-h-[360px] hidden sm:flex bg-transparent p-2 rounded-2xl sm:basis-3/12 grow-0">
-      <figure class="cards-fig">
-        <img src="assets/C-Assignments-thumb.png" alt="Project thumbnail">
-      </figure>
-      <hr>
-      <div>
-        <p class="cards-desc sm:text-base">
-          list of basic C programs for uni CS purpose.
-        </p><button class="cards-button sm:text-sm" role="button"><a href="https://github.com/visrm/C-Assignments"
-            target="_blank">visit</a></button>
+      <div
+        class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] hidden sm:flex bg-transparent p-2 rounded-2xl sm:basis-3/12 grow-0">
+        <figure class="cards-fig">
+          <img src="assets/C-Assignments-thumb.png" alt="Project thumbnail">
+        </figure>
+        <hr>
+        <div>
+          <p class="cards-desc sm:text-base">
+            list of basic C programs for uni CS purpose.
+          </p><button class="cards-button sm:text-sm" role="button"><a href="https://github.com/visrm/C-Assignments"
+              target="_blank">visit</a></button>
+        </div>
       </div>
     </div>
   </div>
-
   <!-- Skillset -->
 
 
