:art: Theme change-ii

--- a/index.html
+++ b/index.html
@@ -189,18 +189,18 @@
         Educational Qualifications
       </h2>
       <div>
-        <p class="px-1 text-base sm:text-lg font-medium font-serif">
+        <p class="px-1 text-base sm:text-lg font-medium font-serif text-black">
           University of Calicut
         </p>
         <p class="px-1 py-0 text-sm sm:text-base font-sans">
           Bachelor of Science, Mathematics
           <span class="flex clear-left text-xs sm:text-sm text-black/75"
-            >2020 - 23</span
+            >2020 - 2023</span
           >
         </p>
       </div>
       <div>
-        <p class="px-1 text-base sm:text-lg font-medium font-serif">
+        <p class="px-1 text-base sm:text-lg font-medium font-serif text-black">
           University of Calicut
         </p>
         <p class="px-1 py-0 text-sm sm:text-base font-sans">
