:art: organise directory

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>
-    Rahul Murali | Masters of Computer Applications Student
+    Rahul Murali | Portfolio
   </title>
-  <script src="scripts/animate.js"></script>
-  <link rel="stylesheet" href="styles/output.css" />
-  <link rel="stylesheet" href="styles\main.css" />
+  <script src="./scripts/animate.js"></script>
+  <link rel="stylesheet" href="./styles/output.css" />
+  <link rel="stylesheet" href="./styles/main.css" />
 </head>
 
 <body class="m-0 p-0 bg-no-repeat bg-cover h-full w-full">
@@ -21,20 +21,6 @@
       Portfolio
     </p>
     <div class="dropdown dropdown-left flex flex-row flex-nowrap h-20 justify-evenly">
-      <label class="swap swap-rotate px-1 mx-1">
-        <!-- this hidden checkbox controls the state -->
-        <input type="checkbox" class="theme-controller" value="synthwave" />
-        <!-- sun icon -->
-        <svg class="swap-off fill-current w-10 h-10 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path
-            d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z" />
-        </svg>
-        <!-- moon icon -->
-        <svg class="swap-on fill-current w-10 h-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path
-            d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z" />
-        </svg>
-      </label>
       <div tabindex="0" role="button" id="menu-btn" class="menu-button place-content-center px-1 mx-1">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-18" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
@@ -42,15 +28,12 @@
       </div>
       <ul tabindex="0" id="dropdown-cont"
         class="dropdown-content z-[1] menu p-1 shadow bg-base-100 rounded-box w-52 mx-4 flex-col flex-nowrap list-none bg-white/80">
-        <li class="sm:mx-1 p-2 basis-1/3 font-semibold text-lg text-black/50">
+        <li class="sm:mx-1 p-2 basis-1/2 font-semibold text-lg text-black/50">
           <a href="#project-bg">Projects</a>
-          </p>
-        <li class="sm:mx-1 p-2 basis-1/3 font-semibold text-lg text-black/50">
-          <a href="#">News</a>
-          </p>
-        <li class="sm:mx-1 p-2 basis-1/3 font-semibold text-lg text-black/50">
+        </li>
+        <li class="sm:mx-1 p-2 basis-1/2 font-semibold text-lg text-black/50">
           <a href="#contact">Contact</a>
-          </p>
+        </li>
       </ul>
     </div>
   </header>
@@ -60,7 +43,7 @@
     <div class="hero min-h-screen bg-gray text-white">
       <div class="hero-overlay bg-opacity-50"></div>
       <div class="hero-content flex-col lg:flex-row mr-auto ml-auto">
-        <img src="assets/user_profile.jpg" class="max-w-sm w-2/5 rounded-full bg-contain shadow-black/50 shadow-2xl"
+        <img src="./assets/user_profile.jpg" class="max-w-sm w-2/5 rounded-full bg-contain shadow-black/50 shadow-2xl"
           alt="PROFILE PICTURE" />
         <div class="p-1 sm:p-3">
           <h1 class="sm:text-5xl text-4xl font-bold"> Rahul Murali
@@ -85,7 +68,7 @@
         <div
           class="cards fade-on-scroll mx-2 sm:m-2 sm:min-h-[360px] flex bg-opacity-50 rounded-2xl basis-6/12 sm:basis-4/12 grow-0">
           <figure class="cards-fig">
-            <img src="assets/weather-app-thumb.png" alt="Project thumbnail" />
+            <img src="./assets/weather-app-thumb.png" alt="Project thumbnail" />
           </figure>
           <div>
             <p class="cards-desc text-sm sm:text-lg">
@@ -99,7 +82,7 @@
         <div
           class="cards fade-on-scroll mx-2 sm:m-2 sm:min-h-[360px] flex bg-opacity-50 rounded-2xl basis-6/12 sm:basis-4/12 grow-0">
           <figure class="cards-fig">
-            <img src="assets/digilocker-guide-thumb.png" alt="Project thumbnail" />
+            <img src="./assets/digilocker-guide-thumb.png" alt="Project thumbnail" />
           </figure>
           <div>
             <p class="cards-desc text-sm sm:text-lg">
@@ -113,7 +96,7 @@
         <div
           class="cards fade-on-scroll mx-2 sm:m-2 sm:min-h-[360px] hidden bg-opacity-50 sm:flex rounded-2xl sm:basis-4/12 grow-0">
           <figure class="cards-fig">
-            <img src="assets/C-Assignments-thumb.png" alt="Project thumbnail" />
+            <img src="./assets/C-Assignments-thumb.png" alt="Project thumbnail" />
           </figure>
           <div>
             <p class="cards-desc text-sm sm:text-lg">
